instruments/AIOUSB/DLL/CoreExports.pas


      WaitForSingleObject(hDACDataMutex, INFINITE);
        L := Length(DACData);
        SetLength(DACData, L + FrameBuffers);
        for I := 0 to FrameBuffers - 1 do begin
          SetString(DACData[L + I], pBuffer, FrameBufferSize);
          Inc(pBuffer, FrameBufferSize);
        end;
      ReleaseMutex(hDACDataMutex);
      ReleaseSemaphore(hDACDataSem, FrameBuffers, nil);

      FrameBytes := FrameBytes mod FrameBufferSize;
      if FrameBytes <> 0 then
        SetString(PendingDACData, pBuffer, FrameBytes)
      else
        PendingDACData := ''
      ;

      NewDACData := '';
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACOutputFrameRaw(DeviceIndex, FramePoints: LongWord; FrameData: PWord): LongWord; cdecl;
const
  FrameBufferSize = 8192; //Bytes per buffer, bloody ass band-aid.

var
  I, L: Integer;
  FrameSamples, FrameBytes, FrameBuffers: Integer;
  NewDACData: TDACData;
  pBuffer: PAnsiChar;
  BytesPerPoint, BytesTransferred, WordsTransferred: LongWord;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if not (bDACStream or bDACDIOStream or bDACSlowWaveStream) then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if not bDACOpen then begin
        Result := ERROR_FILE_NOT_FOUND;
        Exit;
      end;

      if FramePoints <= 0 then begin
        Result := ERROR_INVALID_PARAMETER;
        Exit;
      end;

      if bDACDIOStream then begin
        repeat
          BytesTransferred := 0;
          Result := DIO_StreamFrame(DeviceIndex, FramePoints, FrameData, BytesTransferred);
          if Result <> ERROR_SUCCESS then begin
            DIO_StreamClose(DeviceIndex); //`@ Why?
            Exit;
          end;

          WordsTransferred := BytesTransferred div 2;
          if WordsTransferred >= FramePoints then Break;

          Inc(FrameData, WordsTransferred);
          Dec(FramePoints, WordsTransferred);
        until False;
      end
      else if bDACSlowWaveStream then begin
        BytesPerPoint := 2 * DACsUsed;
        repeat
          BytesTransferred := 0;
          Result := AWU_GenericBulkOut(DeviceIndex, $06, FrameData, FramePoints*BytesPerPoint, BytesTransferred);
          if Result <> ERROR_SUCCESS then Break;

          WordsTransferred := BytesTransferred div 2;
          if WordsTransferred >= FramePoints then Break;

          Inc(FrameData, WordsTransferred);
          Dec(FramePoints, WordsTransferred);
        until False;
      end
      else begin
        if FramePoints > 6400 then begin
          Result := ERROR_OUTOFMEMORY;
          Exit;
        end;

        WaitForSingleObject(hDACDataMutex, INFINITE);
          L := Length(DACData);
        ReleaseMutex(hDACDataMutex);

        if L > 32 then begin
          Result := ERROR_NOT_READY;
          Exit;
        end;

        try
          FrameSamples := Integer(FramePoints) * DACsUsed;
          SetString(NewDACData, PAnsiChar(FrameData), FrameSamples * SizeOf(Word));
        except
          Result := ERROR_NOACCESS;
          Exit;
        end;

        NewDACData := PendingDACData + NewDACData;
        FrameBytes := Length(NewDACData);
        FrameBuffers := FrameBytes div FrameBufferSize;
        pBuffer := PAnsiChar(NewDACData);

        WaitForSingleObject(hDACDataMutex, INFINITE);
          L := Length(DACData);
          SetLength(DACData, L + FrameBuffers);
          for I := 0 to FrameBuffers - 1 do begin
            SetString(DACData[L + I], pBuffer, FrameBufferSize);
            Inc(pBuffer, FrameBufferSize);
          end;
        ReleaseMutex(hDACDataMutex);
        ReleaseSemaphore(hDACDataSem, FrameBuffers, nil);

        FrameBytes := FrameBytes mod FrameBufferSize;
        if FrameBytes <> 0 then
          SetString(PendingDACData, pBuffer, FrameBytes)
        else
          PendingDACData := ''
        ;

        NewDACData := '';
      end;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACOutputStatus(DeviceIndex: LongWord): LongWord; cdecl;
begin
  Result := ERROR_NOT_SUPPORTED; //`@
end;

function DACOutputStart(DeviceIndex: LongWord): LongWord; cdecl;
begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if not bDACStream then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if not bDACOpen then begin
        Result := ERROR_FILE_NOT_FOUND;
        Exit;
      end;

      if bDACStarted then begin
        Result := ERROR_ALREADY_EXISTS;
        Exit;
      end;

      Result := GenericVendorWrite(DeviceIndex, AUR_DAC_CONTROL, $01, 0, 0, nil);

      if Result = ERROR_SUCCESS then bDACStarted := True;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACOutputSetInterlock(DeviceIndex: LongWord; bInterlock: LongBool): LongWord; cdecl;
var
  Value: Byte;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if not bDACStream then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if not bDACOpen then begin
        Result := ERROR_FILE_NOT_FOUND;
        Exit;
      end;

      if bInterlock then Value := $20 else Value := $00;
      Result := GenericVendorWrite(DeviceIndex, AUR_DAC_CONTROL, Value, 0, 0, nil);
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACOutputSetClock(DeviceIndex: LongWord; var ClockHz: Double): LongWord; cdecl;
var
  DCD: TDIO16ClockData;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin

      if not (bDACStream or bDACDIOStream or bDACSlowWaveStream) then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if bDACDIOStream then begin
        DCD.Disables := $00;
        DCD.WriteOctDac := OctDacFromFreq(ClockHz);
        DCD.ReadOctDac := $0000;
        Result := GenericVendorWrite(DeviceIndex, AUR_DIO_SETCLOCKS, 0, 0, SizeOf(DCD), @DCD);
      end
      else if bDACSlowWaveStream then begin
        Result := WriteGlobalTick(DeviceIndex, @ClockHz);
      end
      else begin
        CtrDivisor := Round(12000000 / ClockHz);
        ClockHz := 12000000 / CtrDivisor;

        Result := GenericVendorWrite(DeviceIndex, AUR_DAC_DIVISOR, 0, CtrDivisor, 0, nil); //Set divisor
      end;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;




function DACOutputLoadProcess(DeviceIndex: LongWord; var ClockHz: Double; Samples: LongWord; pSampleData: PWord): LongWord; cdecl;
const
  BlockSamples = 31*512;

var
  TargetPipe: LongWord;
  L: LongWord;
  DCD: TDIO16ClockData;
  BytesTransferred, WordsTransferred: LongWord;
  BakDACs: Integer;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if not (bDACStream or bDACDIOStream or bDACSlowWaveStream) then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if bDACOpen or bDACClosing then begin
        Result := ERROR_TOO_MANY_OPEN_FILES;
        Exit;
      end;

      if bDACDIOStream then begin
            if bDACOpen or bDACClosing or bDIOOpen then begin
                Result := ERROR_TOO_MANY_OPEN_FILES;
                Exit;
            end;

            Result := DIO_StreamOpen(DeviceIndex, False);
            if Result <> ERROR_SUCCESS then Exit;

            DCD.Disables := $00;
            DCD.WriteOctDac := OctDacFromFreq(ClockHz);
            DCD.ReadOctDac := $0000;
            Result := GenericVendorWrite(DeviceIndex, AUR_DIO_SETCLOCKS, 0, 0, SizeOf(DCD), @DCD);
            if Result <> ERROR_SUCCESS then Exit;

            repeat
                BytesTransferred := 0;
                Result := DIO_StreamFrame(DeviceIndex, Samples, pSampleData, BytesTransferred);
                if Result <> ERROR_SUCCESS then begin
                  DIO_StreamClose(DeviceIndex);
                  Exit;
                end;

                WordsTransferred := BytesTransferred div 2;
                if WordsTransferred >= Samples then Break;

                Inc(pSampleData, WordsTransferred);
                Dec(Samples, WordsTransferred);
            until False;

            Result := DIO_StreamClose(DeviceIndex);
      end
      else if bDACSlowWaveStream then begin
            Result := DACOutputOpen(DeviceIndex, ClockHz);
            if Result <> ERROR_SUCCESS then Exit;

            BakDACs := DACsUsed;
            try
              DACsUsed := 1;
              Result := DACOutputFrameRaw(DeviceIndex, Samples, pSampleData);
            finally
              DACsUsed := BakDACs;
            end;
            if Result <> ERROR_SUCCESS then begin
              DACOutputClose(DeviceIndex, True);
            end
            else begin
              Result := DACOutputClose(DeviceIndex, True);
            end;
      end
      else begin
            if Samples >= 128*1024 then begin
              Result := ERROR_OUTOFMEMORY;
              Exit;
            end;

            //Result := DoSetIFace(Handle, $100);
            //if Result <> ERROR_SUCCESS then begin Result := GetMappedFailure(DeviceIndex); Exit; end;

            Result := GenericVendorWrite(DeviceIndex, AUR_DAC_CONTROL, $80, 0, 0, nil); //Reset
            if Result <> ERROR_SUCCESS then Exit;

            Result := GenericVendorWrite(DeviceIndex, AUR_DAC_DATAPTR, $00, 0, 0, nil); //DataPtr << 0
            if Result <> ERROR_SUCCESS then Exit;

            CtrDivisor := Round(12000000 / ClockHz);
            ClockHz := 12000000 / CtrDivisor;

            Result := GenericVendorWrite(DeviceIndex, AUR_DAC_DIVISOR, 0, CtrDivisor, 0, nil); //Set divisor
            if Result <> ERROR_SUCCESS then Exit;

            //Transfer data
            TargetPipe := $02;
            while Samples > BlockSamples do begin
              L := 0;
              Result := AWU_GenericBulkOut(DeviceIndex, TargetPipe, pSampleData, BlockSamples * 2, L);
              if Result <> ERROR_SUCCESS then Exit;
              Inc(pSampleData, BlockSamples);
              Dec(Samples, BlockSamples);
            end;
            L := 0;
            Result := AWU_GenericBulkOut(DeviceIndex, TargetPipe, pSampleData, Samples * 2, L);
            if Result <> ERROR_SUCCESS then Exit;
      end;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACOutputProcess(DeviceIndex: LongWord; var ClockHz: Double; Samples: LongWord; pSampleData: PWord): LongWord; cdecl;
begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    Result := DACOutputLoadProcess(DeviceIndex, ClockHz, Samples, pSampleData);
    if Result <> ERROR_SUCCESS then Exit;

    if Dev[DeviceIndex].bDACDIOStream then
    else if Dev[DeviceIndex].bDACSlowWaveStream then
    else if Dev[DeviceIndex].bDACStream then begin
      Result := GenericVendorWrite(DeviceIndex, AUR_DAC_CONTROL, $01, 0, 0, nil); //Start
      //if Result <> ERROR_SUCCESS then Exit;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;



function DEB_SetInterface(DeviceIndex: LongWord; TargetInterface: Word): LongWord; cdecl;
begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    //Result := DoSetIFace(Dev[DeviceIndex].Handle, TargetInterface);
    Result := ERROR_NOT_SUPPORTED;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DEB_BulkIn(DeviceIndex: LongWord): LongWord; cdecl;
begin
  Result := ERROR_NOT_SUPPORTED;
end;

function DEB_BulkOut(DeviceIndex, TargetPipe: LongWord; pBuf: Pointer; BufLen: LongWord): LongWord; cdecl;
begin
  Result := AWU_GenericBulkOut(DeviceIndex, TargetPipe, pBuf, BufLen, BufLen);
end;

{ TDACWorker }
